# test_case

./: .gitignore  Dockerfile  docker-compose.yml  requirements.txt
market_case/: .coverage  celery_app.py  manage.py  pyproject.toml
market_case/cart/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
market_case/cart/migrations/: 0001_initial.py  0002_cart_products.py
market_case/market/: settings.py  urls.py
market_case/market_case/: asgi.py  settings.py  urls.py  wsgi.py
market_case/payments/: serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
market_case/products/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
market_case/products/migrations/: 0001_initial.py  0002_alter_category_options_alter_products_options.py  0003_remove_category_parent_and_more.py  0004_products_product_subcategory.py  0005_alter_products_discount_price_alter_products_price.py  0006_rename_products_product.py
